[package]
name = "spawn-nft"
version = "0.1.0"
authors = ["nzengi <zenginureddin1@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A highly optimized Rust WebAssembly (WASM) library for Ethereum NFT management."
repository = "https://github.com/nzengi/spawn-nft"
readme = "README.md"
documentation = "https://docs.rs/spawn-nft"
homepage = "https://github.com/nzengi/spawn-nft"
keywords = ["ethereum", "nft", "wasm", "rust", "smart contract"]
categories = ["blockchain", "wasm", "ethereum"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies.console_error_panic_hook]
version = "0.1.6"
optional = true

[profile.release]
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
